[package]
edition.workspace = true
name = "longport-oauth"
version.workspace = true
description = "Longport OpenAPI OAuth 2.0 client for Rust"
license = "MIT OR Apache-2.0"

[features]
blocking = ["tokio/rt-multi-thread"]

[dependencies]
dirs.workspace = true
futures-util.workspace = true
longport-geo.workspace = true
oauth2.workspace = true
poem.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time", "sync", "net"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
